syntax = "proto3";

package org.loopring.lightcone.proto;

message PurgeTokenBalancesForAddresses {}
message PurgeAllOrdersAddresses {}
message PurgeEverything {}

message GetOrdersFromCache {}
message CachedMultiOrders {}

message GetAddressBalanceFromCache {}
message AddressBalanceFromCache {}

message CacheAddressBalanceInfo {}
message CachedAddressBalanceInfo {}



